[package]
name = "egui_demo"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.33"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "json", "form", "rustls"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"